# chatbot-with-tools

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
database/: 20241109070315_create_users.sql
scripts/: migrate
seeds/: 20241109070315_users_seed.sql
src/: main.py
src/modules/: llm.py  pdf_tools.py  user_repository.py
